@@ -10,6 +10,8 @@ import java.util.List;
 @Slf4j
 public class HeapOptionsTest {
 
+    private static final int _1MB = 1024 * 1024;
+
     /**
      * VM options：
      * -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails
@@ -30,5 +32,20 @@ public class HeapOptionsTest {
         for (int i = 0; i < count; i++) {
             data.add(new HeapObject());
         }
+    }
+
+    /**
+     * VM options：
+     * -Xms20M -Xmx20M -Xmn10M -XX:SurvivorRatio=8 -XX:+PrintGCDetails
+     */
+    @Test
+    public void test() {
+        byte[] allocation1, allocation2, allocation3, allocation4;
+        allocation1 = new byte[2 * _1MB];
+        allocation2 = new byte[2 * _1MB];
+        allocation3 = new byte[2 * _1MB];
+        //allocation4 = new byte[2 * _1MB];
+        //出现一次minor GC
+        //allocation4 = new byte[4 * _1MB];
     }
 }
